# TactilityApps

Apps/Diceware/assets/: eff_large_wordlist.txt
Apps/Meshola/: CMakeLists.txt  README.md  manifest.properties
Apps/Meshola/docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  DEVELOPER_GUIDE.md  INTEGRATION.md  PROJECT_OVERVIEW.md  ROADMAP.md  TACTILITY_REFERENCE.md  TODO.md  USER_GUIDE.md
Apps/Meshola/main/: CMakeLists.txt
Apps/Meshola/main/Source/: MesholaApp.cpp  MesholaApp.h  main.cpp
Apps/Meshola/main/Source/mesh/: MeshService.cpp  MeshService.h
Apps/Meshola/main/Source/profile/: Profile.h  ProfileManager.cpp
Apps/Meshola/main/Source/protocol/: IProtocol.h  MeshCoreProtocol.cpp  MeshCoreProtocol.h  ProtocolRegistry.cpp
Apps/Meshola/main/Source/service/: MesholaMsgService.cpp  MesholaMsgService.h
Apps/Meshola/main/Source/storage/: MessageStore.cpp  MessageStore.h
Apps/Meshola/main/Source/views/: ChatView.cpp  ChatView.h  ContactsView.cpp  ContactsView.h
Apps/MesholaMessenger/: README.md
Apps/MesholaMessenger/docs/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPER_GUIDE.md  PROJECT_OVERVIEW.md  TACTILITY_REFERENCE.md  TODO.md  USER_GUIDE.md
Apps/MesholaMessenger/main/: CMakeLists.txt
Apps/MesholaMessenger/main/Source/: MesholaApp.cpp  MesholaApp.h  main.cpp
Apps/MesholaMessenger/main/Source/compat/: dso_handle_stub.c  elf_loader_stubs.c  httpd_eventgroup_stubs.c
Apps/MesholaMessenger/main/Source/profile/: Profile.h
Apps/MesholaMessenger/main/Source/protocol/: Esp32S3Hal.h  IProtocol.h  MeshCoreProtocol.cpp  MeshCoreProtocol.h
Apps/MesholaMessenger/main/Source/service/: MesholaMsgService.cpp  MesholaMsgService.h
Apps/MesholaMessenger/main/Source/storage/: MessageStore.h
Apps/MesholaMessenger/main/Source/views/: ChatView.cpp  ContactsView.cpp  ContactsView.h
